Following part 4 with views as methods

--- a/src/polls/templates/polls/detail.html
+++ b/src/polls/templates/polls/detail.html
@@ -1,7 +1,17 @@
 <h1>{{question}}</h1>
-<ul>
+
+{% if error_message %}
+<p><strong>{{error_message}}</strong></p>
+{% endif %}
+
+<form action="{% url 'polls:vote' question.id %}" method="post">
+    {% csrf_token %}
     {% for choice in question.choice_set.all %}
-    <li>{{choice}}</li>
+    <input type="radio" required="required" name="choice" id="choice_{{forloop.counter}}" value="{{choice.id}}"/>
+    <label for="choice_{{forloop.counter}}">{{choice}}</label>
+    <br />
     {% endfor %}
-</ul>
+    <input type="submit" value="Vote" />
+</form>
+
 <p><a href="{% url 'polls:index' %}">&lt;&lt; Go back</a></p>
