Just organizing html in specific folder to pages

--- a/src/polls/templates/polls/pages/index.html
+++ b/src/polls/templates/polls/pages/index.html
@@ -1,15 +1,9 @@
+{% extends 'polls/base.html' %}
+
 {% load static %}
 
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django Tutorial With Clever Programmer</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/css/styles.css' %}" />
-</head>
-<body>
     {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
@@ -26,5 +20,4 @@
         <br />
         <img src="{% static 'polls/images/choose_me_cat.jpeg' %}" alt="A cat rising up one foot" />
     </p>
-</body>
-</html>
+{% endblock content %}
