Just import JS where it'll be used

--- a/src/polls/templates/polls/base.html
+++ b/src/polls/templates/polls/base.html
@@ -15,5 +15,6 @@
         {% block content %}{% endblock content %}
     </div>
     {% include 'polls/base_static_files/_js.html' %}
+    {% block scripts %}{% endblock scripts %}
 </body>
 </html>
