--- a/src/polls/templates/polls/pages/results.html
+++ b/src/polls/templates/polls/pages/results.html
@@ -1,5 +1,7 @@
 {% extends 'polls/base.html' %}
 
+{% load static %}
+
 {% block content %}
     <h1 class="text-center py-3 text-primary">The question is: <em>{{question}}</em></h1>
     <div class="row">
@@ -27,3 +29,11 @@
     >Vote againg?</a>
     <a href="{% url 'polls:index' %}" class="btn btn-info">Finish</a>
 {% endblock content %}
+
+{% block scripts %}
+{% comment %} ChartJS CDN {% endcomment %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
+{% comment %} Custom JS to render the chart {% endcomment %}
+<script src="{% static 'polls/js/render_charts.js' %}" type="text/javascript"></script>
+{% endblock scripts %}
